# ontologyops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  SECURITY.md  SPONSORS.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  stale.yml
config/: example-config.yml  grafana-dashboard.json  prometheus-config.yml
docs/: architecture.md  contributing.md  getting-started.md  index.md  installation.md
docs/api-reference/: deployment-api.md  monitoring-api.md  testing-api.md  version-control-api.md
docs/tutorials/: advanced-testing.md  cicd-setup.md  your-first-deployment.md
docs/user-guide/: deployment.md  monitoring.md  testing.md  version-control.md
examples/: README.md  deployment_demo.py  monitoring_demo.py  quickstart.py  testing_demo.py  version_control_demo.py
examples/ontologies/: customer_master.owl  financial_model.owl  supply_chain.owl  supply_chain_v2.owl
ontologyops/: __init__.py  cli.py  server.py
ontologyops/deployment/: __init__.py  deployer.py  notification.py  rollback.py
scripts/: build_docs.sh  release.sh  run_tests.sh  setup_dev_environment.sh
tests/: __init__.py  conftest.py  test_deployment.py  test_monitoring.py  test_testing_framework.py  test_version_control.py
(+20 files in other folders)
